--- a/frontend.html
+++ b/frontend.html
@@ -38,8 +38,12 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.smartrecruiters.com/AroghiaGroup/743999698518027-web-front-end-engineer-for-global-sportswear-brand'>Aroghia Group Web Front End Engineer for Global Sportswear Brand | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light">Beaverton, OR, USA</span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
 <h5><a href='https://jobs.jobvite.com/ringcentral/job/oDXrbfwW'>RingCentral Careers - Front-end Engineer</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Paris, France  Paris</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
 <h5><a href='https://jobs.lever.co/revzilla/002be844-5c04-4697-880f-c74489707aa9'>RevZilla - Front End Engineer</a></h5> 
@@ -144,7 +148,7 @@
 <p><span class="badge badge-light">San Jose, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/lmgroup/743999698465571-senior-front-end-engineer'>lm group Senior Front End Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/lmgroup/743999698465571-senior-front-end-engineer'>lm group Senior Front End Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Madrid, Spain</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -188,15 +192,15 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dedeleads.com/job/stilman-advanced-strategies-looking-for-remote-front-end-developer-angular/'>STILMAN Advanced Strategies looking for Remote Front End Developer, Angular</a></h5> 
+<h5><a href='https://dedeleads.com/job/stilman-advanced-strategies-looking-for-remote-front-end-developer-angular/'>STILMAN Advanced Strategies looking for Remote Front End Developer, Angular</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dedeleads.com/job/livearea-looking-for-sr-front-end-developer-sfcc/'>LiveArea looking for Sr. Front End Developer (SFCC)</a></h5> 
+<h5><a href='https://dedeleads.com/job/livearea-looking-for-sr-front-end-developer-sfcc/'>LiveArea looking for Sr. Front End Developer (SFCC)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://apply.workable.com/zencargo/j/A7D28AE544/'>Senior Frontend Engineer - Zencargo</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://apply.workable.com/zencargo/j/A7D28AE544/'>Senior Frontend Engineer - Zencargo</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -204,7 +208,7 @@
 <p><span class="badge badge-light">D?sseldorf, Germany</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://watermelon.recruitee.com/o/mediorsenior-frontend-developer'>
+<h5><a href='https://watermelon.recruitee.com/o/mediorsenior-frontend-developer'>
       Medior/Senior Frontend Developer - Watermelon
     </a></h5> 
 <p><span class="badge badge-light">Utrecht, Netherlands</span></p>
@@ -306,7 +310,7 @@
 <p><span class="badge badge-light">Tennessee</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/medallia/b57a8157-7dca-45d6-8d47-d4faa27537c6'>Medallia - Senior Software Engineer, Frontend</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/medallia/b57a8157-7dca-45d6-8d47-d4faa27537c6'>Medallia - Senior Software Engineer, Frontend</a></h5> 
 <p><span class="badge badge-light">Carlsbad, CA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -403,7 +407,7 @@ freedom to thrive anywhere. We are building a banking service that allows you to
 <p><span class="badge badge-light">Berlin, Deutschland  Berlin</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.xing.com/jobs/hamburg-frontend-developer-52201363'>Frontend Developer (m/w/d) in Hamburg | XING Jobs</a></h5> 
+<h5><a href='https://www.xing.com/jobs/hamburg-frontend-developer-52201363'>Frontend Developer (m/w/d) in Hamburg | XING Jobs</a></h5> 
 <p><span class="badge badge-light">Hamburg</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -439,7 +443,7 @@ freedom to thrive anywhere. We are building a banking service that allows you to
 <p><span class="badge badge-light">Barcelona  Barcelona</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://vodastra.applytojob.com/apply/QTgaaKI0cl/Frontend-Developer'>Front-end Developer - Vodastra - Career Page</a></h5> 
+<h5><a href='http://vodastra.applytojob.com/apply/QTgaaKI0cl/Frontend-Developer'>Front-end Developer - Vodastra - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -461,10 +465,6 @@ freedom to thrive anywhere. We are building a banking service that allows you to
 <hr/>
 <h5><a href='https://boards.greenhouse.io/soundhoundinc/jobs/4499058002'>Job Application for Senior Front-end Engineer at SoundHound Inc.</a></h5> 
 <p><span class="badge badge-light">Santa Clara, CA</span></p>
-<p>Posted on: 2019-10-28</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/soundhoundinc/jobs/4499059002'>Job Application for Senior Front-end Engineer at SoundHound Inc.</a></h5> 
-<p><span class="badge badge-light">Boulder</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
 
