--- a/product-manager.html
+++ b/product-manager.html
@@ -45,11 +45,11 @@
 <p>Posted on: 2019-10-30</p>
 <hr/>
 <h5><a href='http://stackpath.applytojob.com/apply/OmzSVoLkum/Edge-Services-Product-Manager'>Edge Services - Product Manager - StackPath - Career Page</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Dallas, TX</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
 <h5><a href='http://stackpath.applytojob.com/apply/hliJrHTPcZ/Edge-Computing-Product-Manager'>Edge Computing - Product Manager - StackPath - Career Page</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Dallas, TX</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
 <h5><a href='https://jobs.jobvite.com/justicedigitalandtechnology/job/oMbsbfwk'>Justice Digital and Technology Careers - Product Manager, London</a></h5> 
@@ -88,7 +88,7 @@
 <p><span class="badge badge-light">London  London  London London  London  London</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qRIaVfwo&k=Job&j=olcsbfwU&__jvst=Employee&__jvsd=sU0JUhwj&__jvsc=Jobvite&bid=n5zAoMwT'>Justice Digital and Technology Careers - Lead Product Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qRIaVfwo&k=Job&j=olcsbfwU&__jvst=Employee&__jvsd=sU0JUhwj&__jvsc=Jobvite&bid=n5zAoMwT'>Justice Digital and Technology Careers - Lead Product Manager</a></h5> 
 <p><span class="badge badge-light">London London  London  London</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -146,7 +146,7 @@
 <p><span class="badge badge-light">Cupertino, CANorth Carolina</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://snap.hr/moneybox/job/product-manager/a9b5459dbc60eb14d55431f48f65f27b/'>Product Manager at Moneybox</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://snap.hr/moneybox/job/product-manager/a9b5459dbc60eb14d55431f48f65f27b/'>Product Manager at Moneybox</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -178,7 +178,7 @@
 <p><span class="badge badge-light">Raanana, Israel</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/mercari/jobs/4485106002'>Job Application for Product Designer at Mercari</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/mercari/jobs/4485106002'>Job Application for Product Designer at Mercari</a></h5> 
 <p><span class="badge badge-light">Palo Alto, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -214,11 +214,11 @@
 <p><span class="badge badge-light">Yerevan</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/deliveroo/jobs/1831883?gh_src=eb585a351'>Job Application for Senior Product Manager at Deliveroo</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/deliveroo/jobs/1831883?gh_src=eb585a351'>Job Application for Senior Product Manager at Deliveroo</a></h5> 
 <p><span class="badge badge-light">London  London</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://farmersfridge.applytojob.com/apply/YU3Zt1kBNS/Product-Manager-Business-Operations'>Product Manager, Business Operations - Farmer's Fridge - Career Page</a></h5> 
+<h5><a href='http://farmersfridge.applytojob.com/apply/YU3Zt1kBNS/Product-Manager-Business-Operations'>Product Manager, Business Operations - Farmer's Fridge - Career Page</a></h5> 
 <p><span class="badge badge-light">Chicago</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -417,7 +417,7 @@ online education programs and Physician customer relationship management?...</p>
 <p><span class="badge badge-light">Plano, TX</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/TitanDataInc/743999698184261-technical-product-owner-digital-offers-and-promotions'>TitanData Inc. Technical Product Owner - Digital Offers and Promotions | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/TitanDataInc/743999698184261-technical-product-owner-digital-offers-and-promotions'>TitanData Inc. Technical Product Owner - Digital Offers and Promotions | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -429,7 +429,7 @@ online education programs and Physician customer relationship management?...</p>
 <p><span class="badge badge-light">Milpitas</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Medfar/743999698311406-product-owner'>Medfar Product Owner | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Medfar/743999698311406-product-owner'>Medfar Product Owner | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
